kubernetes/apps/default/mend-renovate/app/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mend-renovate
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 403"]
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames: ["renovate.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: mend-renovate-app-template
          port: 80
